Fix align issue

--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -148,6 +148,9 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .right-align {
+    text-align: right;
+  }
   
 
 @media(min-width:768px) {
